fix  images and spacing

--- a/projects/ng-components/src/components/sm-teaser-layout-3/sm-teaser3.component.scss
+++ b/projects/ng-components/src/components/sm-teaser-layout-3/sm-teaser3.component.scss
@@ -1,15 +1,49 @@
+@use '../../../../variables';
 :host {
   .container {
-    max-width: 1450px;
+    max-width: var(--max-content-width);
     margin: auto;
-    padding: 100px 50px;
-    background-color: #f6fafa;
+    padding: 50px var(--content-margin);
+    background-color:map-get(variables.$element-colors, 'dark');;
     text-align: center;
-    .teaser-container {
+
+    &__header {
+      font-size: 48px;
+      font-family: var(--font-family);
+      margin: 0 0 50px;
+    }
+
+    &__teaser-container {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: 1 fr;
       row-gap: 20px;
       column-gap: 20px;
+    }
+
+    &__see-all {
+      margin-top: 55px;
+      color: var(--primary-color);
+      font-family: var(--font-family);
+      font-size: 16px;
+      line-height: 19px;
+    }
+  }
+
+  @media(min-width: map-get(variables.$breakpoints, 'phone')){
+    .container {
+
+      &__teaser-container {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+  }
+
+  @media(min-width: map-get(variables.$breakpoints, 'tablet')){
+    .container {
+
+      &__teaser-container {
+        grid-template-columns: repeat(var(--column-count), 1fr);
+      }
     }
   }
 }
